# JoyAI-VL-Interaction

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pj_deploy.sh  pj_env.sh
benchmarks/video_concurrency/: README.md  benchmark.py  test_benchmark.py
benchmarks/video_concurrency/scripts/: test_adapter.sh  test_vllm.sh
datasets/: README.md  convert_data.py
doc/: architecture.md  architecture.zh-CN.md  getting_started.md  getting_started.zh-CN.md  rtsp_streaming.md  rtsp_streaming.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
install/: README.md  README.zh-CN.md  constraints.txt  download-models.sh  install-audio-runtime.sh  install.sh  pyproject.asr.toml  pyproject.background-agent.toml  pyproject.toml
install/tests/: run_real_env_tests.sh  verify_real_env.py
rtsp/: mediamtx.sh  rtsp.sh
services/asr/: README.md  README.zh-CN.md  asr_adapter.py
services/asr/scripts/: run-adapter.sh  run-model.sh  run.sh
services/background-agent/: README.md  README.zh-CN.md  background-agent.env
services/background-agent/codex_api/: __init__.py  main.py
services/background-agent/scripts/: run.sh
services/scripts/: run.sh  stop.sh
services/tts/: README.md  README.zh-CN.md  pyproject.toml  tts_adapter.py
services/tts/config/: qwen3_tts_lowmem.yaml
services/tts/scripts/: run-adapter.sh  run-model.sh  run.sh
services/webinfer/: README.md  README.zh-CN.md  live_adapter.py  memory_summarizer.py
services/webinfer/scripts/: run.sh  start_adapter.sh  start_all_models.sh  start_model.sh  start_summary_model.sh  stop.sh
services/webinfer/tests/: test_session_reset.py
services/webui/: README.md  README.zh-CN.md
services/webui/scripts/: start_server.sh  stop_server.sh
services/webui/src/joy_interaction_webui/: __init__.py  asr.py  background_model.py  local_file_server.py  rtsp_track.py  server.py  tts.py  video_processor.py  vlm_service.py  websocket_video.py
services/webui/src/joy_interaction_webui/static/: index.html
services/webui/src/joy_interaction_webui/static/favicon/: site.webmanifest
services/webui/src/joy_interaction_webui/static/images/: README.md  README.zh-CN.md
services/webui/src/live_vlm_webui/: __init__.py  local_file_server.py  rtsp_track.py  server.py  tts.py  vlm_service.py
services/webui/src/live_vlm_webui/static/: index.html
tools/mediamtx/: mediamtx.yml
